kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 30001
  selector:
    app: flask-app
  type: NodePort
